--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@expo/vector-icons": "^10.2.0",
     "@react-native-community/masked-view": "0.1.6",
+    "@react-navigation/bottom-tabs": "^5.5.1",
     "@react-navigation/drawer": "^5.7.5",
     "@react-navigation/material-bottom-tabs": "^5.2.5",
     "@react-navigation/material-top-tabs": "^5.2.9",
